k8s/first-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: first-service
spec:
  selector:
    app: first
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: ClusterIP
