k8s/ingress-rewrite.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: first-ingress-rewrite
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /toporischev-ivan($|/)(.*)
            pathType: Prefix
            backend:
              serviceName: first-service
              servicePort: 9000
